# people_data

./: Cargo.toml  README.md  TO_DO.md
i18n/en/: data_docs.ftl
i18n/fr/: data_docs.ftl
migrations/2022-02-10-201856_create_basic_tables/: up.sql
migrations/2023-01-22-185117_people_data_models/: down.sql  up.sql
src/: database.rs  errors.rs  lib.rs  main.rs  schema.rs
src/graphql/: mod.rs  utilities.rs
src/handlers/: authentication_handlers.rs  base.rs  forms.rs  mod.rs  routes.rs  users.rs
src/models/: _to_implement.rs  mod.rs  org_ownership.rs  org_tier.rs  organization.rs  person.rs  role.rs  team.rs  team_ownership.rs  user.rs
templates/: base.html  index.html
